[build] setup ECJ compilation