@@ -19,3 +19,5 @@
 --add-exports java.base/sun.nio.ch=ALL-UNNAMED
 -Dorg.slf4j.simpleLogger.log.org.jacoco.maven.AgentMojo=warn
 -Dorg.slf4j.simpleLogger.log.org.jacoco.maven.AgentITMojo=warn
+-Djdk.attach.allowAttachSelf=true
+-XX:+EnableDynamicAgentLoading
